--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,8 @@
-streamlit
+streamlit>=1.28.0
+nltk>=3.8
+beautifulsoup4>=4.12.0
+requests>=2.31.0
+pandas>=2.0.0
+plotly>=5.15.0
+textstat>=0.7.0
+numpy>=1.24.0
